--- a/index.html
+++ b/index.html
@@ -30,22 +30,17 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Joel King</h1>
+        <h2>HS Senior in Gotha, Germany</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a senior preparting to study at BJU in the fall. I will be a Music and Business double major. </p>
          <p>
-            I attend Gateway Baptist Church in Travelers Rest, SC. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            I attend the Bibelgemeinde Gotha (Bible church of Gotha) in Gotha, Germany. You can email me  
+            <a href="mailto:jking528@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy playing cello, listening to music, and doing stuff with my friends.
          </p>
-        <h3>EDUCATION</h3>
-        Computer Science<br />
-        Bob Jones University
-    </div>
+          </div>
 </body>
 </html>
