--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@ body {
     font-family: Verdana;
 }  
 #content {
-    background: lightyellow;
-    min-width: 200px;
-    max-width: 500px;
-    padding: 50px;
+    background: lightblue;
+    min-width: 400px;
+    max-width: 600px;
+    padding: 75px;
     margin: auto;
     margin-top: -50px;
     line-height: 150%;
 }
 h1 {
     letter-spacing: 2px;
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
 }
 h2 {
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
 }
 h3 {
@@ -33,7 +33,7 @@ h3 {
         <h1>Joel King</h1>
         <h2>HS Senior in Gotha, Germany</h2>
         
-         <p>I am a senior preparting to study at BJU in the fall. I will be a Music and Business double major. </p>
+         <p>I am a senior preparing to study at BJU in the fall. I will be a Music and Business double major. </p>
          <p>
             I attend the Bibelgemeinde Gotha (Bible church of Gotha) in Gotha, Germany. You can email me  
             <a href="mailto:jking528@students.bju.edu">here</a>.
