--- a/index.html
+++ b/index.html
@@ -43,5 +43,5 @@ h3 {
          </p>
           </div>
 </body>
-    <img src="Profile Picture.enc" alt="Picture of me">
+    <img class="center-image" src="Profile Picture.enc" alt="Picture of me">
 </html>
